# mediocre-data-science

./: .gitignore  cookiecutter.json  go.sh  pyproject.toml  pytest.ini  test.py
src/{{ cookiecutter.project }}/: __init__.py  _auto.py
src/{{ cookiecutter.project }}/lib/: _checksum.py  _df2sql.py  _encrypt.py  _sqlquery.py  _with_exit_stack.py
src/{{ project }}/: _auto.py
src/{{ project }}/app/a/: __init__.py
src/{{ project }}/lib/: __init__.py  _attach.py  _cache.py  _decrypt.py  _download.py  _embd.py  _random.py  _scp.py  _summary.py  _textarea.py
{{ cookiecutter.project }}/: .env.example
{{ cookiecutter.project }}/src/{{ cookiecutter.project }}/: _config.py  _version.py
{{ cookiecutter.project }}/src/{{ cookiecutter.project }}/app/: __init__.py
{{ cookiecutter.project }}/src/{{ cookiecutter.project }}/lib/: _getkey.py  _terminal.py  _track.py
